Bug 99197 - Rendering error of punctuation mark in Word document.
Summary: Rendering error of punctuation mark in Word document.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: lowest minor
Assignee: Justin L
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: DOC-Character
  Show dependency treegraph
 
Reported: 2016-04-10 03:29 UTC by Niels Kristian Bech Jensen
Modified: 2021-02-21 19:05 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
MS Word test case. (31.50 KB, application/msword)
2016-04-10 03:29 UTC, Niels Kristian Bech Jensen
Details
Expected output (from MS Office 2010) (5.40 KB, application/pdf)
2016-04-10 03:30 UTC, Niels Kristian Bech Jensen
Details
Output from LibreOffice Writer 5.0.5.2. (49.65 KB, application/pdf)
2016-04-10 03:31 UTC, Niels Kristian Bech Jensen
Details
Output from LibreOffice Writer 5.1.2.2. (49.65 KB, application/pdf)
2016-04-10 03:31 UTC, Niels Kristian Bech Jensen
Details
The test case opened and saved in LibreOffice 5.1.2.2 (14.50 KB, application/msword)
2016-04-19 03:54 UTC, Niels Kristian Bech Jensen
Details
Output from MS Office 2010 after saving the test case in LibreOffice. (5.53 KB, application/pdf)
2016-04-19 03:55 UTC, Niels Kristian Bech Jensen
Details
Same bug, misplaced nikkud (4.43 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2021-02-21 19:02 UTC, Yotam Benshalom
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Niels Kristian Bech Jensen 2016-04-10 03:29:41 UTC
Created attachment 124213 [details]
MS Word test case.

LibreOffice Writer renders punctuation marks at the beginning of the line in stead of at the end of the line in some MS Word documents. It is visible both on-screen and in the resulting PDF files.

I have attached a small test case with PDFs from MS Office 2010 (the expected output), and from LibreOffice Writer 5.0.5.2 and 5.1.2.2.

Best regards,
Niels Kristian Bech Jensen
Comment 1 Niels Kristian Bech Jensen 2016-04-10 03:30:32 UTC
Created attachment 124214 [details]
Expected output (from MS Office 2010)
Comment 2 Niels Kristian Bech Jensen 2016-04-10 03:31:14 UTC
Created attachment 124215 [details]
Output from LibreOffice Writer 5.0.5.2.
Comment 3 Niels Kristian Bech Jensen 2016-04-10 03:31:58 UTC
Created attachment 124216 [details]
Output from LibreOffice Writer 5.1.2.2.
Comment 4 Niels Kristian Bech Jensen 2016-04-10 03:41:04 UTC
Extra information: I use the Danish localisation package with LibreOffice.

Best regards,
Niels Kristian Bech Jensen
Comment 5 Joel Madero 2016-04-10 03:45:01 UTC
Really weird. 

Verified all the way back to LibreOffice 3.3 (inherited from OOo, updating version to reflect this).

Minor: Can slow down but won't prevent high quality work;
Lowest: Currently we have one test case, seems like it's not a widespread problem but some weird corner case.
Comment 6 Niels Kristian Bech Jensen 2016-04-19 03:54:16 UTC
Created attachment 124481 [details]
The test case opened and saved in LibreOffice 5.1.2.2
Comment 7 Niels Kristian Bech Jensen 2016-04-19 03:55:02 UTC
Created attachment 124482 [details]
Output from MS Office 2010 after saving the test case in LibreOffice.
Comment 8 Niels Kristian Bech Jensen 2016-04-19 03:57:56 UTC
I suspect that the problem is linked to text direction or justification. I have opened the test case in LibreOffice 5.1.2.2 and saved it without changes. Opening the saved file in MS Office 2010 renders it all right justified even though the program is set to left justified.

Best regards,
Niels Kristian Bech Jensen
Comment 9 QA Administrators 2017-05-22 13:27:54 UTC Comment hidden (obsolete)
Comment 10 Niels Kristian Bech Jensen 2017-05-22 14:47:14 UTC
The bug is still present in LibreOffice 5.3.3 on Microsoft Windows.

Best regards,
Niels Kristian Bech Jensen
Comment 11 QA Administrators 2018-05-23 02:37:13 UTC Comment hidden (obsolete)
Comment 12 Niels Kristian Bech Jensen 2018-05-23 02:51:00 UTC
The bug is still present in LibreOffice 6.0.4.2 (x64) on Microsoft Windows.

Best regards,
Niels Kristian Bech Jensen
Comment 13 QA Administrators 2019-05-24 02:58:34 UTC Comment hidden (obsolete)
Comment 14 Niels Kristian Bech Jensen 2019-05-24 04:27:11 UTC
The bug is still present in LibreOffice 6.2.4.2 on MS Windows.

Best regards,
Niels Kristian Bech Jensen
Comment 15 Justin L 2020-04-17 16:14:22 UTC
Repro 7.0+

In Word, if you look in the page setup layout properties, you will see the section is set to "right to left". So LO is setting the Default page style as RTL also of course.

The default paragraph style is reset to LTR, but the paragraph style used (Sidehoved & sidefod) inherits from nothing. So in LO it inherits from the page style. So the trick will be to figure out whether the paragraph style ought to be connected to the default (no, it inherits from no-style), or if no-inheritance styles need to default to LTR.
Comment 16 Justin L 2020-04-18 09:02:24 UTC
proposed fix at http://gerrit.libreoffice.org/c/core/+/92468
Comment 17 Commit Notification 2020-04-23 07:34:05 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7b9878671a74dc9043d0cdc93e019fdd7d622e8c

tdf#99197 ww8import: all root-level para-styles default to LTR

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Niels Kristian Bech Jensen 2020-04-28 04:40:09 UTC
I can confirm that the problem is fixed in the 'Master' branch daily build.

Best regards,
Niels Kristian Bech Jensen
Comment 19 Yotam Benshalom 2020-08-29 15:02:02 UTC
This fix means that RTL ms word documents are being opened as LTR documents. This breaks former and correct behaviour.
Comment 20 Justin L 2020-08-29 17:15:19 UTC
(In reply to Yotam Benshalom from comment #19)
> This fix means that RTL ms word documents are being opened as LTR documents.
> This breaks former and correct behaviour.

Is there a bug report about this? Where are the sample documents?
Comment 21 Yotam Benshalom 2020-08-30 08:12:11 UTC
New bug with example is filed: Bug #136282
Comment 22 Yotam Benshalom 2021-02-21 19:02:36 UTC Comment hidden (no-value)
Comment 23 Yotam Benshalom 2021-02-21 19:05:58 UTC Comment hidden (no-value)