tdf#99197 ww8import: all root-level para-styles default to LTR

It is not just the "Normal" paragraph style that should
default to LTR. Any new style that does not inherit from
anything should be set to LTR, regardless of page/section
settings.

Change-Id: Ibe1241b813b82afa9b218eae50d6c78042131893